[project]
name = "keysight"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "pyvisa>=1.14.1",
    "pyvisa-py>=0.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
